# bitshares-core

./: .gitmodules  appveyor.bash  appveyor.yml
libraries/app/: application.cpp
libraries/chain/: db_block.cpp
libraries/chain/include/graphene/chain/: database.hpp
libraries/chain/include/graphene/chain/protocol/: transaction.hpp
libraries/chain/protocol/: transaction.cpp
libraries/plugins/elasticsearch/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt
tests/: CMakeLists.txt
tests/common/: database_fixture.cpp
tests/tests/: operation_tests.cpp  operation_tests2.cpp
